test/manifests/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: webapp-test
  labels:
    name: webapp-test
    environment: test
